--- a/theory/jc/optical_data/notes.tex
+++ b/theory/jc/optical_data/notes.tex
@@ -198,7 +198,7 @@ and Palik's data for high frequencies.}
 \begin{figure}
 \includegraphics[width=0.7\columnwidth]{img/ratio.pdf}
 \caption{Ratio of the integral $\epsilon_1$ and the total contribution
-$\epsilon_1+\epsilon_2$. The contribution of $\epsilon_3$ is negligibly small.}
+$\epsilon_1+\epsilon_2$. The contribution of $\epsilon_3$ is negligibly small. Palik's Handbook data was used.}
 \label{fig:ratio}
 \end{figure}
 
