"theory geometry" seems wrong

--- a/src/mainpage.dox
+++ b/src/mainpage.dox
@@ -13,7 +13,7 @@ mesoscopic world, it has relations to many open physical questions. As the
 Casimir force is the dominant force between electically neutral bodies at
 micron or sub-micron distances, the Casimir effect plays an important role in
 the search for new hypothetical forces predicted by unified theories. The
-Casimir effect is also linked to the theory geometry and the puzzle of the
+Casimir effect is also linked to the theory of gravitation and the puzzle of the
 cosmological constant. All energy gravitates and thus zero point fluctuations
 are expected to contribute to the stress–energy tensor in Einstein's field
 equations. In fact, several cosmological observations like the discovery that
