--- a/src/mainpage.dox
+++ b/src/mainpage.dox
@@ -17,7 +17,7 @@ Casimir effect is also linked to the theory of gravitation and the puzzle of the
 cosmological constant. All energy gravitates and thus zero point fluctuations
 are expected to contribute to the stress–energy tensor in Einstein's field
 equations. In fact, several cosmological observations like the discovery that
-the universe expands in an increasing rate suggest a non-zero energy density of
+the universe expands with an increasing rate suggest a non-zero energy density of
 vacuum. However, estimations of the cosmological constant and meassurements
 disagree by about 120 orders of magnitude.
 
