--- a/src/mainpage.dox
+++ b/src/mainpage.dox
@@ -18,7 +18,7 @@ cosmological constant. All energy gravitates and thus zero point fluctuations
 are expected to contribute to the stress–energy tensor in Einstein's field
 equations. In fact, several cosmological observations like the discovery that
 the universe expands with an increasing rate suggest a non-zero energy density of
-vacuum. However, estimations of the cosmological constant and meassurements
+vacuum. However, estimations of the cosmological constant and measurements
 disagree by about 120 orders of magnitude.
 
 
