--- a/theory/pfa/pfa.tex
+++ b/theory/pfa/pfa.tex
@@ -59,7 +59,7 @@ replace it by an integration,
 \end{equation}
 and so the free energy becomes
 \begin{equation}
-\frac{E_\text{PP}}{A} = \frac{\hbar}{4\pi^2} \sum_p \int_0^\infty \mathrm{d}\xi \int_{\xi/\sol}^\infty \mathrm{d}\kappa \, \kappa \log\left(1-\rho_p\right)\,.
+\frac{E_\text{PP}}{A} = \frac{\hbar}{4\pi^2} \sum_p \int_0^\infty \mathrm{d}\xi \int_{\xi/\sol}^\infty \mathrm{d}\kappa \, \kappa \log\left(1-r_p^2 \e^{-2\kappa d}\right)\,.
 \end{equation}
 
 The free energy in the plane-sphere geometry is given by
@@ -68,7 +68,7 @@ The free energy in the plane-sphere geometry is given by
 \end{equation}
 and therefore for $T=0$
 \begin{equation}
-E_\text{PFA} = \frac{\hbar RL}{2\pi} \sum_p \int_1^{1+R/L} \mathrm{d}t \int_0^\infty \mathrm{d}\xi \int_{\xi/\sol}^\infty \mathrm{d}\kappa \, \kappa \log\left(1-r_p \e^{-2\kappa L t}\right)
+E_\text{PFA} = \frac{\hbar RL}{2\pi} \sum_p \int_1^{1+R/L} \mathrm{d}t \int_0^\infty \mathrm{d}\xi \int_{\xi/\sol}^\infty \mathrm{d}\kappa \, \kappa \log\left(1-r_p^2 \e^{-2\kappa L t}\right)
 \end{equation}
 
 \addcontentsline{toc}{chapter}{Bibliography}
