--- a/src/mainpage.dox
+++ b/src/mainpage.dox
@@ -15,7 +15,7 @@ micron or sub-micron distances, the Casimir effect plays an important role in
 the search for new hypothetical forces predicted by unified theories. The
 Casimir effect is also linked to the theory of gravitation and the puzzle of the
 cosmological constant. All energy gravitates and thus zero point fluctuations
-are expected to contribute to the stress–energy tensor in Einstein's field
+are expected to contribute to the stress-energy tensor in Einstein's field
 equations. In fact, several cosmological observations like the discovery that
 the universe expands with an increasing rate suggest a non-zero energy density of
 vacuum. However, estimations of the cosmological constant and measurements
@@ -35,12 +35,12 @@ a plane. The plane is infinite in the xy-direction.
 \subsection features Features
 
 
- - Calculate the free energy F(T,L,R) for different separations and temperatures
- - Calculate the free energy F(T→∞,L,R) in the high temperature limit
+ - Calculate the free energy \f$\mathcal{F}(T,L,R)\f$ for different separations and temperatures
+ - Calculate the free energy \f$\mathcal{F}(T\to\infty,L,R)\f$ in the high temperature limit
  - Full support for perfect conductors, Drude metals, and generic metals described by a user-defined dielectric function
  - libcasimir is fast and reliable
  - ready to use programs: you don't have to modify the code
- - libcasimir is free software – you may use it or even modify it
+ - libcasimir is free software - you may use it or even modify it
 
 
 \subsection installation Installation
@@ -81,7 +81,7 @@ command:
     # k=5, xi=500.484898016, logdetD=-3.56248208858549e-05, t=39.9074
     # k=6, xi=625.60612252, logdetD=-1.31970422831906e-06, t=29.2294
     #
-    # L/R, L, R, T, ldim, F*(L+R)/(ħc)
+    # L/R, L, R, T, ldim, F*(L+R)/(hbar*c)
     0.01333333333333333, 2e-06, 0.00015, 300, 525, -1049.959261174529
 
 
@@ -116,15 +116,19 @@ Also, libcasimir uses some third-party software:
 
 \section publications Publications related to libcasimir
 
+ - Advancing numerics for the Casimir effect to experimentally relevant aspect ratios, <br>
+   Michael Hartmann, Gert-Ludwig Ingold, Paulo A. Maia Neto, <br>
+   Phys. Scr. 93, 114003 (2018), DOI: <a href="https://doi.org/10.1088/1402-4896/aae34e">10.1088/1402-4896/aae34e</a>
+
  - Plasma vs Drude modelling of the Casimir force: beyond the proximity force approximation, <br>
    Michael Hartmann, Gert-Ludwig Ingold, and Paulo A. Maia Neto, <br>
-   Phys. Rev. Lett. 119, 043901 (2017)
+   Phys. Rev. Lett. 119, 043901 (2017), DOI: <a href="https://doi.org/10.1103/PhysRevLett.119.04390">10.1103/PhysRevLett.119.04390</a>
 
  - Disentangling geometric and dissipative origins of negative Casimir entropies, <br>
    Stefan Umrath, Michael Hartmann, Gert-Ludwig Ingold, and Paulo A. Maia Neto, <br>
-   Phys. Rev. E 92, 042125 (2015)
+   Phys. Rev. E 92, 042125 (2015), DOI: <a href="https://doi.org/10.1103/PhysRevE.92.042125">10.1103/PhysRevE.92.042125</a>
 
  - Geometric origin of negative Casimir entropies: A scattering-channel analysis, <br>
-   Gert-Ludwig Ingold, Stefan Umrath, Michael Hartmann, Romain Guérout, Astrid Lambrecht, Serge Reynaud, and Kimball A. Milton, <br>
-   Phys. Rev. E 91, 033203 (2015)
+   Gert-Ludwig Ingold, Stefan Umrath, Michael Hartmann, Romain Guerout, Astrid Lambrecht, Serge Reynaud, and Kimball A. Milton, <br>
+   Phys. Rev. E 91, 033203 (2015), DOI: <a href="https://doi.org/10.1103/PhysRevE.91.033203">10.1103/PhysRevE.91.033203</a>
 */
